# api/models/produtosModel.js
@@ -1,0 +1,10 @@
+const mongoose = require('mongoose');
+
+const produtoSchema = new mongoose.Schema({
+  nome: { type: String, required: true },
+  preco: { type: Number, required: true, min: 0 }
+}, {
+  timestamps: true 
+});
+
+module.exports = mongoose.model('Produto', produtoSchema);
